# backend/src/main/resources/client/swagger_3.0.2.yaml
@@ -201,7 +201,9 @@ paths:
         '200':
           description: Successful response
           content:
-            application/json: {}
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/EventResponse"
       operationId: events-get
       description: Elenco degli eventi attualmente presenti sul portale di emilia
         romagna turismo.
@@ -421,6 +423,250 @@ components:
             "$ref": "#/components/schemas/Problem"
       description: Unexpected error
   schemas:
+    EventResponse:
+      properties:
+        data:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+                format: int32
+              lang:
+                type: string
+              permalink:
+                type: string
+              title:
+                type: string
+              subtitle:
+                type: string
+              excerpt:
+                type: string
+              description:
+                type: string
+              author:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    format: int32
+                  name:
+                    type: string
+              pub_date:
+                type: string
+              locations:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    title:
+                      type: string
+                    locality:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          format: int32
+                        name:
+                          type: string
+                    city_id:
+                      type: integer
+                      format: int32
+                    city:
+                      type: string
+                    province:
+                      type: string
+                    address:
+                      type: string
+                    number:
+                      type: string
+                    lat:
+                      type: number
+                    lng:
+                      type: number
+              dates:
+                type: object
+                properties:
+                  from:
+                    type: string
+                    format: date
+                  to:
+                    type: string
+                    format: date
+                  week:
+                    type: array
+                    items:
+                      type: integer
+                      format: int32
+                  dates:
+                    type: array
+                    items:
+                      type: string
+                  inauguration:
+                    type: string
+                    format: nullable
+              times:
+                type: object
+                properties:
+                  type:
+                    type: string
+                  data:
+                    type: string
+                    format: nullable
+                  friendly_text:
+                    type: string
+              contacts:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    type:
+                      type: string
+                    label:
+                      type: string
+                    value:
+                      type: string
+              category:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      format: int32
+                    parent:
+                      type: integer
+                      format: int32
+                    name:
+                      type: string
+              attachments:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      format: int32
+                    url:
+                      type: string
+                    title:
+                      type: string
+                    name:
+                      type: string
+                    copyright:
+                      type: string
+                    width:
+                      type: integer
+                      format: int32
+                    height:
+                      type: integer
+                      format: int32
+                    is_primary:
+                      type: integer
+                      format: int32
+                    created_at:
+                      type: string
+                    license:
+                      type: string
+                    license_url:
+                      type: string
+              ticketing:
+                type: object
+                properties:
+                  website:
+                    type: string
+                  subscriptions:
+                    type: string
+                  full_rate:
+                    type: string
+                  reduced_rate:
+                    type: string
+                  gratuity:
+                    type: string
+                  type:
+                    type: integer
+                    format: int32
+                  entrance:
+                    type: string
+              target:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      format: int32
+                    parent:
+                      type: integer
+                      format: int32
+                    name:
+                      type: string
+              theme:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      format: int32
+                    parent:
+                      type: integer
+                      format: int32
+                    name:
+                      type: string
+              created_at:
+                type: string
+              updated_at:
+                type: string
+        links:
+          type: object
+          properties:
+            first:
+              type: string
+            last:
+              type: string
+            prev:
+              type: string
+              format: nullable
+            next:
+              type: string
+        meta:
+          type: object
+          properties:
+            current_page:
+              type: integer
+              format: int32
+            from:
+              type: integer
+              format: int32
+            last_page:
+              type: integer
+              format: int32
+            links:
+              type: array
+              items:
+                type: object
+                properties:
+                  url:
+                    type: string
+                    format: nullable
+                  label:
+                    type: string
+                  active:
+                    type: boolean
+            path:
+              type: string
+            per_page:
+              type: integer
+              format: int32
+            to:
+              type: integer
+              format: int32
+            total:
+              type: integer
+              format: int32
+
     LocalityResponse:
       properties:
         data:
