# root/rest-ert/src/main/kotlin/org/hikit/er/rest/EventDto.kt
@@ -1,0 +1,15 @@
+package org.hikit.er.rest
+
+import java.time.LocalDateTime
+import java.util.*
+
+data class EventDto(
+    var id: String,
+    var permalink: String,
+    var title: String,
+    var subtitle: String,
+    var description: String,
+    var coordinates: List<CoordinatesDto>,
+    var dateFrom: Date,
+    var dateTo: Date
+)
